@@ -222,7 +222,14 @@ are more than welcome.
 
 =head1 AUTHOR
 
-Mike Eldridge <diz@cpan.org>
+Mike Eldridge E<lt>diz@cpan.orgE<gt>
+
+=head1 COPYRIGHT AND LICENSE
+
+This software is copyright (c) 2011 by Mike Eldridge E<lt>diz@cpan.orgE<gt>
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
 
 =cut
 
